--- a/.gitignore
+++ b/.gitignore
@@ -164,9 +164,12 @@ svg-inkscape/
 
 
 # inskcape temp
+# !/assets/projects/*.svg # TODO
 *.RUQQN1
 *.TO1KN1
 *.KLEGN1
+*.RFARO1
+*.PQCRO1
 
 #OSMNX cache
 osmnx_routing/cache/
