--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+# to initialize it properly:
+# git submodule init
+# git submodule update
 [submodule "oswm_codebase"] 
   path = oswm_codebase 
   url = https://github.com/kauevestena/oswm_codebase
