--- a/.github/workflows/data_daily_updating.yml
+++ b/.github/workflows/data_daily_updating.yml
@@ -36,6 +36,10 @@ jobs:
 
       #### main ________________________________________________________________
 
+      - run: |
+          git submodule init
+          git submodule update
+
       - run: python oswm_codebase/getting_data.py
       
       - run: python oswm_codebase/filtering_adapting_data.py
