--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -49,6 +49,7 @@ jobs:
           COMMIT_MESSAGE="weekly updates at $DATETIME"
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git pull
           git add .
           git commit -m "$COMMIT_MESSAGE"
           git push
