--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -44,6 +44,7 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git pull
           git add .
           git commit -m "node setup commit"
           git push
