--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -36,14 +36,17 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-      #### setup dependencies __________________________________________________
-      - run: pip install -r requirements.txt
-
-      #### main ________________________________________________________________
 
       - run: |
           git submodule init
           git submodule update
+
+      #### setup dependencies __________________________________________________
+      - run: pip install -r oswm_codebase/requirements.txt
+
+      #### main ________________________________________________________________
+
+
 
       - run: python oswm_codebase/getting_feature_versioning_data.py
   
