--- a/.github/workflows/data_daily_updating.yml
+++ b/.github/workflows/data_daily_updating.yml
@@ -36,18 +36,14 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
+      #### setup dependencies __________________________________________________
+      - run: pip install -r requirements.txt
 
       #### main ________________________________________________________________
 
       - run: |
           git submodule init
           git submodule update
-
-
-      #### setup dependencies __________________________________________________
-
-      - run: pip install -r oswm_codebase/requirements.txt
-
 
       - run: python oswm_codebase/getting_data.py
       
