--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -32,17 +32,14 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-
+      #### setup dependencies __________________________________________________
+      - run: pip install -r requirements.txt
 
       #### main ________________________________________________________________
 
       - run: |
           git submodule init
           git submodule update
-
-
-      #### setup dependencies __________________________________________________
-      - run: pip install -r oswm_codebase/requirements.txt
 
       - run: python oswm_codebase/patch_readme_homepage.py
       - run: python oswm_codebase/special_updates.py
