--- a/.github/workflows/manual_stash.yml
+++ b/.github/workflows/manual_stash.yml
@@ -16,5 +16,6 @@ jobs:
     # continue-on-error: true
     steps:
       #### actions/checkout 
+      - uses: actions/checkout@v3
 
       - run: git stash
