--- a/.github/workflows/data_daily_updating.yml
+++ b/.github/workflows/data_daily_updating.yml
@@ -36,9 +36,6 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-      #### setup dependencies __________________________________________________
-      - run: pip install -r requirements.txt
-
       #### main ________________________________________________________________
 
       - run: |
@@ -47,6 +44,9 @@ jobs:
           cd oswm_codebase
           git pull -r https://github.com/kauevestena/oswm_codebase
           cd ..
+
+      #### setup dependencies __________________________________________________
+      - run: pip install -r oswm_codebase/requirements.txt
 
       - run: python oswm_codebase/getting_data.py
       
