--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -32,8 +32,7 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-      #### setup dependencies __________________________________________________
-      - run: pip install -r requirements.txt
+
 
       #### main ________________________________________________________________
 
@@ -44,6 +43,10 @@ jobs:
           git pull -r https://github.com/kauevestena/oswm_codebase
           cd ..
 
+      #### setup dependencies __________________________________________________
+      - run: pip install -r requirements.txt
+
+      #### main ________________________________________________________________
       - run: python oswm_codebase/patch_readme_homepage.py
       - run: python oswm_codebase/special_updates.py
   
