--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -36,11 +36,9 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-      #### setup dependencies __________________________________________________
-      - run: pip install -r requirements.txt
+
 
       #### main ________________________________________________________________
-
       - run: |
           git submodule init
           git submodule update
@@ -48,6 +46,10 @@ jobs:
           git pull -r https://github.com/kauevestena/oswm_codebase
           cd ..
 
+      #### setup dependencies __________________________________________________
+      - run: pip install -r oswm_codebase/requirements.txt
+
+      ### main ________________________________________________________________
       - run: python oswm_codebase/getting_feature_versioning_data.py
   
       #### upload ______________________________________________________________
