New webmap, submodule

--- a/.github/workflows/data_daily_updating.yml
+++ b/.github/workflows/data_daily_updating.yml
@@ -59,7 +59,9 @@ jobs:
 
       - run: python oswm_codebase/generation/vec_tiles_gen.py
 
-      - run: python oswm_codebase/create_webmap.py
+      # - run: python oswm_codebase/create_webmap.py
+
+      - run: python oswm_codebase/webmap/create_webmap_new.py
 
       - run: python oswm_codebase/data_quality/tag_values_checking.py
 
