wf fix, codebase

--- a/.github/workflows/special_updates.yml
+++ b/.github/workflows/special_updates.yml
@@ -1,4 +1,4 @@
-name: updates_weekly
+name: special_updates
 
 # Controls when the workflow will run
 on:
@@ -7,10 +7,6 @@ on:
   #   branches: ["main"]
   # pull_request:
   #   branches: ["main"]
-
-  schedule:
-    # run weekly
-    - cron: "5 8 * * 0"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,21 +17,13 @@ permissions:
   id-token: write
 
 jobs:
-  updates_weekly:
+  node_setup:
     runs-on: ubuntu-latest
     # continue-on-error: true
     steps:
       #### actions/checkout ____________________________________________________
       # @see https://github.com/actions/checkout
       - uses: actions/checkout@v3
-
-      #### setup submodules _____________________________________________________
-      - run: |
-          git submodule init
-          git submodule update
-          cd oswm_codebase
-          git pull -r https://github.com/kauevestena/oswm_codebase
-          cd ..
 
       #### setup-python ________________________________________________________
       # @see https://github.com/actions/setup-python
@@ -44,20 +32,27 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-      #### setup dependencies __________________________________________________
-      - run: pip install -r oswm_codebase/requirements.txt
+      #### main ________________________________________________________________
 
-      ### main ________________________________________________________________
-      - run: python oswm_codebase/getting_feature_versioning_data.py
+      - run: |
+          git submodule init
+          git submodule update
+          cd oswm_codebase
+          git pull -r https://github.com/kauevestena/oswm_codebase
+          cd ..
+
+      #### setup dependencies __________________________________________________
+      - run: pip install -r requirements.txt
+
+      #### main ________________________________________________________________
+      - run: python oswm_codebase/special_updates.py
   
       #### upload ______________________________________________________________
       # @see https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
-          DATETIME="$(TZ=":America/Sao_Paulo" date +"%Y-%m-%d")"
-          COMMIT_MESSAGE="weekly updates at $DATETIME"
           git config user.name github-actions
           git config user.email github-actions@github.com
           git pull
           git add .
-          git commit -m "$COMMIT_MESSAGE"
+          git commit -m "node setup commit"
           git push
