--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -32,10 +32,7 @@ jobs:
           python-version: "3.11"
           cache: 'pip' # caching pip dependencies
 
-
-
-      #### main ________________________________________________________________
-
+      #### setup submodule____________________________________________________________
       - run: |
           git submodule init
           git submodule update
@@ -47,11 +44,8 @@ jobs:
       - run: pip install -r requirements.txt
 
       #### main ________________________________________________________________
-      - run: python oswm_codebase/special_updates.py
-      - run: python oswm_codebase/patch_readme_homepage.py
-      - run: python oswm_codebase/other/wipers/wipe_changed_stuff.py
+      - run: sh oswm_codebase/runners/setup.sh
 
-  
       #### upload ______________________________________________________________
       # @see https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
