--- a/.github/workflows/update_codebase.yml
+++ b/.github/workflows/update_codebase.yml
@@ -1,46 +1,38 @@
-name: update_codebase
+name: 'Auto‑Update Submodules'
 
-# to manually update some codebase that "got lost"
-
-# Controls when the workflow will run
 on:
-  # # Triggers the workflow on push or pull request events but only for the "main" branch
-  # push:
-  #   branches: ["main"]
-  # pull_request:
-  #   branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+  push:
+    branches: ['main']
   workflow_dispatch:
 
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
 jobs:
-  node_setup:
+  update-submodule:
     runs-on: ubuntu-latest
-    # continue-on-error: true
     steps:
-      #### actions/checkout ____________________________________________________
-      # @see https://github.com/actions/checkout
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          submodules: recursive
+          fetch-depth: 0
 
-      # download and update the submodule
-      - run: |
-          git submodule init
-          git submodule update
-          cd oswm_codebase
-          git pull -r https://github.com/kauevestena/oswm_codebase
-          cd ..
-  
-      #### upload ______________________________________________________________
-      # @see https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git pull
-          git add .
-          git commit -m "node setup commit"
-          git push
+      - name: Sync submodule config
+        run: |
+          git submodule sync --recursive
+
+      - name: Update submodule to latest main
+        run: |
+          git submodule update --remote --merge oswm_codebase
+
+      - name: Stage and commit changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add oswm_codebase
+          git diff --cached --quiet || git commit -m "ci: update oswm_codebase submodule to latest main"
+
+      - name: Push submodule update
+        run: |
+          git push origin HEAD:${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
