--- a/.github/workflows/data_daily_updating.yml
+++ b/.github/workflows/data_daily_updating.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          DATETIME="$(date +'%Y-%m-%d' --date='TZ=\"America/Sao_Paulo\"')"
+          DATETIME="$(date +'%Y-%m-%d')"
           git add -A
           if ! git diff --cached --quiet; then
             git commit -m "data updating at $DATETIME"
